styles/pagination.styl
@import './global.styl'
@import './var.styl'

.u-pagination
	display flex
	align-items center
	user-select none
	&-box
		border 1px solid #ddd
		border-radius 2px
		display inline-flex
		justify-content center
		margin 0 4px
		cursor pointer
		transition color .2s
		&:hover
			color $main-color
			border-color $main-color
		&-checked
			color $main-color
			border-color $main-color
		&-disabled
			cursor not-allowed
			color #00000040
			border 1px solid #d9d9d9
			&:hover
				color #00000040
				border-color #ddd
	&-size
		&-small
			width 25px
			height 25px
		&-medium
			width 30px
			height 30px
		&-large
			width 35px
			height 35px

